--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,10 @@ Changelog
 1.0a2 - Unreleased
 ------------------
 
+* Handle session cookies first as they can contain a colon, thereby breaking
+  the hexadecimal decode.
+  [witsch]
+
 
 1.0a1 - 2009/07/23
 ------------------
