--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,11 @@ Changelog
 1.2 - Unreleased
 ----------------
 
-- Add `z3c.autoinclude` entry point for automatic ZCML loading in Plone 3.3+.
+* Handle auth cookies that aren't hex encoded (used in PluggableAuthService
+  < 1.5).
+  [buchi]
+
+* Add `z3c.autoinclude` entry point for automatic ZCML loading in Plone 3.3+.
   [witsch]
 
 
