--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,9 @@ Changelog
 1.2 - Unreleased
 ----------------
 
+* Added support for Plone 4.x session cookies.
+  [buchi]
+
 * Handle auth cookies that aren't hex encoded (used in PluggableAuthService
   < 1.5).
   [buchi]
