--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,9 @@ Changelog
 1.3 - Unreleased
 ----------------
 
+* Properly deal with doubly quoted __ac cookies (e.g. from PAS.CookieAuthHelper).
+  [lgraf]
+
 * skip binascii.Error
   [kroman0]
 
